--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </div>
     <output id="result" for="number-input"></output>
     <div id="animation-container"></div>
-    <script src="script.js"></script>
+    <script src="final_script.js"></script>
   </body>
 </html>
